# FanFan

./: .gitignore  build.gradle  config.gradle  fanfan.jks  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/fanfan/novel/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: abnf.abnf  call.bnf  userwords
app/src/main/assets/cfg/: aiui_phone.cfg
app/src/main/assets/tts/: xiaofeng.jet  xiaoyan.jet
app/src/main/cpp/: smart_cropper.cpp
app/src/main/java/com/fanfan/serial/: Device.java  Driver.java  HexUtils.java  SerialPort.java  SerialPortFinder.java  SerialPortManager.java
app/src/main/java/com/fanfan/youtu/: Youtucode.java
app/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
app/src/main/res/anim/: base_loading_large_anim.xml  pophidden_anim.xml
app/src/main/res/drawable/: base_list_selector.xml  bg_btn_style_bule.xml  city_hot_grid_item.xml  contact_search_box_background.xml  edit_cursor_color.xml  face_face_check_in.xml  face_face_extraction.xml  face_instagram.xml  face_recognition_bar.xml  face_witness_contrast.xml  ic_in_call_touch_handle.xml  ic_lockscreen_answer_activated_layer.xml  ic_lockscreen_answer_normal_layer.xml  ic_lockscreen_decline_activated_layer.xml  ic_lockscreen_decline_normal_layer.xml  ic_lockscreen_outerring.xml  kaixin_background.xml  kaixin_list_item_bg.xml  search_box_cancel_btn_bg.xml  selector_list_item.xml  set_progress_bar_style.xml
app/src/main/res/layout/: activity_add_dance.xml  activity_add_navigation.xml  activity_add_site.xml  activity_add_video.xml  activity_add_voice.xml  activity_amap.xml  activity_authentication.xml  activity_camera_reaoder.xml  activity_check_in.xml  activity_check_in2.xml  activity_crash.xml  activity_data_navigation.xml  activity_data_site.xml  activity_data_video.xml  activity_data_voice.xml  activity_detectface.xml  activity_face_add_group.xml  activity_face_data.xml  activity_face_group_list.xml  activity_face_liveness_setting.xml  activity_face_recognition.xml  activity_face_reg.xml  activity_face_register.xml  activity_face_register2.xml  activity_face_rgb_detect.xml  activity_face_user.xml  activity_face_user_group_manager.xml  activity_face_user_list.xml  activity_fanfan_introduce.xml  activity_file_import.xml  activity_forget.xml  activity_google_vr.xml  activity_greeting.xml  activity_import.xml  activity_info_detail.xml  activity_instagram_photo.xml  activity_lockactivity.xml  activity_login.xml  activity_main.xml  activity_main1.xml  (+80 more)
app/src/main/res/menu/: add_black.xml  add_map.xml  add_white.xml  finish_black.xml  finish_white.xml  home_black.xml  home_white.xml  main.xml  search_view.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  stringlocal.xml  strings.xml  strings_preference.xml  stringsorder.xml  styles.xml
app/src/main/res/values-1862x1080/: lay_y.xml
lib_zxing/: build.gradle
(+603 files in other folders)
